@@ -1,3 +1,5 @@
+15.aug (lv)
+      - #5637 support reading bww files: set midi instrument to 72
 14.aug (ws)
       - infrastructure for new drumroll editor
       - changed implementation of KeySig + KeySigEvent: do not pack
